<resources>
    <string name="app_name">OneNote ✏</string>
    <string name="login">LOGIN</string>
    <string name="signed_in">Signed-In</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="show_location">Show location</string>
    <string name="saved">Saved</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="note_deleted">Note deleted</string>
    <string name="delete_message">Do you really want to delete this note?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="preview_image">Preview Image</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="search">Search</string>
</resources>