<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            app:titleTextColor="@color/white"/>

        <EditText
            android:id="@+id/noteEditTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:hint="@string/title"/>

        <EditText
            android:id="@+id/noteEditMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:hint="@string/message"/>

        <TextView
            android:id="@+id/latitudeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="16dp"
            android:text="Latitude:" />

        <TextView
            android:id="@+id/longitudeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:text="Longitude:" />

        <org.osmdroid.views.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_margin="25dp" />

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="190dp"
            android:layout_height="190dp"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:contentDescription="@string/preview_image"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_margin="16dp">

            <ImageButton
                android:id="@+id/button_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_shortcut_camera_alt"
                android:contentDescription="@string/camera" />

            <ImageButton
                android:id="@+id/button_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_shortcut_insert_photo"
                android:contentDescription="@string/gallery" />

            <ImageButton
                android:id="@+id/buttonLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_shortcut_location_on"
                android:contentDescription="@string/show_location" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/save"
            style="@style/Button"/>

    </LinearLayout>
</ScrollView>